# expense_tracker

./: README.md
backend/: .env  main.py  pyproject.toml  test.db
backend/app/: app.py  db.py  models.py  schemas.py
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/pages/: Home.css  Home.tsx
